--- a/festival/static/scss/base/_defaults.scss
+++ b/festival/static/scss/base/_defaults.scss
@@ -20,8 +20,9 @@ html {
 body {
   font: $base_font_weight $base_font_size $base_font_family;
   line-height: $base_line_height;
+  // background: $base_background_color url('../img/bg_manzoni.jpg') no-repeat top;
   background: $base_background_color;
-  @include retina-background-image("../img/bg", "png", 256px, 256px);
+  // @include retina-background-image("../img/bg", "png", 256px, 256px);
   color: $base_font_color;
 }
 
