--- a/templates/includes/search_form.html
+++ b/templates/includes/search_form.html
@@ -2,23 +2,23 @@
 <form action="{% url "search" %}" role="search">
     <div class="sticked-form">
         <input class="form-control" placeholder="{% trans "Search" %}" type="text" name="q" value="{{ request.REQUEST.q }}">
-        <input type="submit" class="btn btn-default" value="{% trans "Go" %}">
-    </div>
-    {% if search_model_choices %}
-        {% if search_model_choices|length == 1 %}
-        <input type="hidden" name="type" value="{{ search_model_choices.0.1 }}">
-        {% else %}
-        <div class="form-group">
-        <select class="form-control" name="type">
-            <option value="">{% trans "Everything" %}</option>
-            {% for verbose_name, model in search_model_choices %}
-            <option value="{{ model }}"
-                {% if model == request.REQUEST.type  %}selected{% endif %}>
-                {{ verbose_name }}
-            </option>
-            {% endfor %}
-        </select>
-        </div>
+        {% if search_model_choices %}
+            {% if search_model_choices|length == 1 %}
+            <input type="hidden" name="type" value="{{ search_model_choices.0.1 }}">
+            {% else %}
+            <div class="select  search__form__select">
+                <select class="select" name="type">
+                    <option value="">{% trans "Everything" %}</option>
+                    {% for verbose_name, model in search_model_choices %}
+                    <option value="{{ model }}"
+                        {% if model == request.REQUEST.type  %}selected{% endif %}>
+                        {{ verbose_name }}
+                    </option>
+                    {% endfor %}
+                </select>
+            </div>
+            {% endif %}
         {% endif %}
-    {% endif %}
+        <input type="submit" class="btn" value="{% trans "Go" %}">
+    </div>
 </form>
