--- a/festival/static/scss/base/_layout.scss
+++ b/festival/static/scss/base/_layout.scss
@@ -26,7 +26,7 @@
 
 .main {
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 3rem;
   @media (min-width : $desktop ) {
     float: left;
     width: 70%;
@@ -39,7 +39,7 @@
   @media (min-width : $desktop ) {
     float: left;
     width: 30%;
-    padding-left: .5rem;
+    padding: 0 .5rem;
   }
 }
 
