--- a/templates/includes/language_selector.html
+++ b/templates/includes/language_selector.html
@@ -2,10 +2,10 @@
 {% get_language_info_list for LANGUAGES as languages %}
 {% if settings.USE_MODELTRANSLATION and languages|length > 1 %}
 <div>
-  <form action="{% url "set_language" %}" method="post" id="language_selector_form">
+  <form action="{% url "set_language" %}" method="post" id="language_selector_form" hidden="true">
     {% csrf_token %}
       <div class="select">
-        <select name="language" class="form-control">
+        <select name="language" class="form-control" id="language_selector_select">
           {% for language in languages %}
           <option value="{{ language.code }}"
           {% if language.code == LANGUAGE_CODE %}selected="selected"{% endif %}>
@@ -16,5 +16,9 @@
       </div>
     <input type="submit" class="btn btn-default" value="{% trans "Change" %}" />
   </form>
+  {% for language in languages %}
+  <a href="#" onclick="$('#language_selector_select').val('{{ language.code }}'); $('#language_selector_form').submit();">
+  {{ language.name_local }}
+  {% endfor %}
 </div>
 {% endif %}
